syntax = "proto3"; 

message VehicleData 
{
    bytes h264_data = 1;
     uint32 h264_size = 2; //码流size
    repeated VehicleBox vehicle_box = 3;
    repeated TrafficAnalysisData traffic_analysis_data = 4; 
    uint32 frame_index = 5;
}

message VehicleBox
{
    float x = 1;
    float y = 2;
    float height = 3;
    float width = 4;
}

message TrafficAnalysisData
{
    int32 lane_id = 1;
    int32 head_loop_state = 2;
    int32 tail_loop_state = 3;
    double head_loop_state_ratio = 4;
    double tail_loop_state_ratio = 5;
    int32 class_id_in_heads = 6;
    int32 car_flow = 7;
    double queue_length = 8;
}

